# ppl

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
.github/workflows/: backend.yml  cronjob_pubmed_api.yml  frontend.yml  main.yml
scripts/: variables.sh
services/backend/: README.md  api.Dockerfile  db.Dockerfile  environment.yaml  pyproject.toml  requirements.txt
services/backend/data/: articles.json  brochure.json  responses.json
services/backend/src/ppl/: path.py
services/backend/src/ppl/api/: main.py  models.py
services/backend/src/ppl/db/: index_builder.py  pubmed.py
services/backend/src/ppl/utils/: index_builder.py  model_zoo.py  pubmed.py
services/frontend/: index.html  package-lock.json
services/frontend/src/: App.svelte
tfconfig/: main.tf
