[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ppl"
authors = [
    {name = "Oh-hyeon Choung", email = "ohhyeon.choung@gmail.com"},
]
description = "Backend service for PPL"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]

[project.scripts]
main = "ppl.main:main"

[tool.setuptools.dynamic]
version = {attr = "ppl.__version__"}


[options.packages.find]
where="src"
